<?xml version="1.0"?>
<package format="2">
    <name>erl_env</name>
    <version>0.1.0</version>
    <description>erl_env is a C++ library of environment abstraction for planning algorithms.</description>
    <author email="daizhirui@hotmail.com">Zhirui Dai</author>
    <maintainer email="daizhirui@hotmail.com">Zhirui Dai</maintainer>
    <license>MIT</license>
    <url type="repository">https://github.com/ExistentialRobotics/erl_env.git</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>erl_common</build_depend>

    <build_export_depend>erl_common</build_export_depend>

</package>
