[build-system]
requires = ["setuptools", "wheel"]

[tool.black]
line-length = 120

[erl]
description = "Python bindings for erl_env"
python_pkg_name = "erl_env"
pybind_module_name = "pyerl_env"
erl_dependencies = ["erl_common"]
build_type = "Release"
version = "0.1.0"
author = "Zhirui Dai"
author_email = "zhdai@ucsd.edu"
entry_points = { console_scripts = [] }
license = "MIT"
